# et-connector

./: .gitignore  AGENTS.md  CMakeLists.txt  EasyTierConnector  README.md  app.manifest  resources.qrc
.github/workflows/: build-linux-deb.yml  build-master.yml  build-pr.yml
.workflow/: master-pipeline.yml
assets/: innosetup.iss
etcore/linux/: easytier-cli
package/linux/aur/: .SRCINFO  PKGBUILD  build_aur.sh
package/linux/deb/: build_deb.sh
package/linux/deb/DEBIAN/: control
package/linux/deb/usr/share/applications/: etconnector.desktop
package/macos/: build_dmg.sh
package/windows/: build_win.ps1  innosetup.iss
shell/: workflow-linux-deb.sh  workflow-macos-dmg.sh  workflow-win.ps1
src/: AboutDialog.cpp  AboutDialog.h  CasdoorLogin.cpp  CasdoorLogin.h  ConfigManager.cpp  ConfigManager.h  DevicesDialog.cpp  DevicesDialog.h  DiagnosticsDialog.cpp  DiagnosticsDialog.h  ETRunService.cpp  ETRunService.h  ETRunWorkerWin.cpp  ETRunWorkerWin.h  QuitConfirmDialog.cpp  SettingsDialog.cpp  SettingsDialog.h  SystemTray.cpp  SystemTray.h  main.cpp
